# GenshinWikiMap

./: README.md  daily_material.py  draw_character_map.py  draw_monster_map.py  generate.py  image_utils.py  main.py  path.py  pyproject.toml  update.py  utils.py
.github/workflow/: update_data.yml
.github/workflows/: generate_zip.yml  update_data.yml
AmbrApi/: __init__.py  api.py  data_source.py  handler.py  models.py
data/: daily_materials.json  data_list.json  paint_offset.json  元素精通系数.json  别名.json  原魔列表.json  原魔材料.json  圣遗物.json  圣遗物信息.json  圣遗物列表.json  天赋.json  天赋命座修正.json  有效词条.json  材料列表.json  材料组.json  武器信息.json  武器列表.json  武器类型.json  类型.json  角色列表.json  角色地区.json  角色立绘偏移.json  角色立绘偏移已用.json
data/artifact/: 10001.json  10002.json  10003.json  10004.json  10005.json  10006.json  10007.json  10008.json  10009.json  10010.json  10011.json  10012.json  10013.json  14001.json  14002.json  14003.json  14004.json  15001.json  15002.json  15003.json  15005.json  15006.json  15007.json  15008.json  15009.json  15010.json  15011.json  15013.json  15014.json  15015.json  15016.json  15017.json  15018.json  15019.json  15020.json  15021.json  15022.json  15023.json  15024.json  15025.json  (+9 more)
data/avatar/: 10000002.json  10000003.json  10000005-岩.json  10000005-草.json  10000005-雷.json  10000005-风.json  10000006.json  10000007-岩.json  10000007-草.json  10000007-雷.json  10000007-风.json  10000014.json  10000015.json  10000016.json  10000020.json  10000021.json  10000022.json  10000023.json  10000024.json  10000025.json  10000026.json  10000027.json  10000029.json  (+61 more)
(+1294 files in other folders)
